# chalilulz

./: .gitignore  AGENTS.md  DISCORD_ANNOUNCE.md  README.md  chalilulz.py  pyproject.toml  setup.py
.skills/code-review/: SKILL.md
.skills/create-skill/: SKILL.md
.skills/refactor-code/: SKILL.md
.skills/write-tests/: SKILL.md
chalilulz/: __init__.py
chalilulz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chalilulz/skills/code-review/: SKILL.md
chalilulz/skills/prompt_engineering/: SKILL.md
chalilulz/skills/refactor-code/: SKILL.md
chalilulz/skills/write-tests/: SKILL.md
golfed/: chalminilulz.py
tests/: test_api.py  test_both_versions.py  test_do_tool_calls.py  test_main.py  test_parsing.py  test_schema.py  test_skills.py  test_tools.py  test_utils.py
