[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chalilulz"
version = "0.0.1b6"
description = "Agentic coding CLI with multi-provider LLM support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Chalilulz", email = "chalilulz@example.com"}
]
keywords = ["cli", "llm", "ai", "coding", "openrouter", "ollama", "mistral", "groq", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
chalilulz = "chalilulz:main"

[project.urls]
Homepage = "https://github.com/ForgedInFiles/chalilulz"
Repository = "https://github.com/ForgedInFiles/chalilulz"

[project.optional-dependencies]
all = []  # placeholder for compatibility, installs all bundled skills
dev = ["ruff"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["chalilulz*"]

[tool.setuptools.package-data]
chalilulz = ["skills/*/*", "skills/*/scripts/*"]
